--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -41,12 +41,9 @@ body{
   display: flex;
   list-style: none;
 }
-img{
+.img{
   width: 50%;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+  align-self: center;
 }
 ol{
   display: flex;
@@ -54,4 +51,10 @@ ol{
   margin: 0;
   padding: 0;
   list-style: none;
+}
+.navbar{
+  display: flex;
+  list-style: none;
+  justify-content: space-evenly;
+  position: sticky;
 }
