--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -1,60 +1,94 @@
 body{
-  /* background-color: #121212;  */
+  background-color: #F3F3F3 ; 
   color: black;
-}
-#flexContainer{
-  display: flex;
-  justify-content: center;
-}
-.box{
-  display: flex;
-  width: 50%;
-  height: 100px;
-  justify-content: center;
-  align-items: center;
-  background-color: orange;
 }
 /* .carousel-container{
   width: 900px;
   height: 900px;
 } */
-#container{
+#submitForm{
+  float: none;
+}
+#bottom{
+  margin-left: 10px;
+  font-weight: bold;
+}
+.articleBox{
   display: flex;
-  justify-content: center;
+  margin-bottom: 30px;
 }
-.box2{
-  width: 50%;
-  height: 50%;
-  background-color: yellow;
-}
-#nav{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-variant: tabular-nums;
-  line-height: 1.5715;
-  list-style: none;
-  font-feature-settings: "tnum";
-  font-size: 14px;
-}
-#display{
-  display: flex;
-  list-style: none;
+.articleText{
+  font-size: larger;
 }
 .img{
   width: 50%;
   align-self: center;
 }
-ol{
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  list-style: none;
+.active{
+  color: red;
 }
-.navbar{
-  display: flex;
-  list-style: none;
-  justify-content: space-evenly;
+input{
+  float: right;
+  margin-right: 1em;
+}
+hr{
+  border-width: 10px;
+}
+nav{
+  background-color: rgb(2, 0, 0);
+  display: block;
+  overflow: hidden;
+  height: 3em; 
   position: sticky;
+  top: 0px;
+}
+li{
+  display: block; 
+  float: left;
+  list-style: none;
+  margin-left: 3em;
+  margin-right: 5em;
+  text-align: center;
+  color: white;
+}
+select{
+  margin: auto 10px;
+}
+li:visited{
+  text-decoration: none;
+}
+.poop{
+  text-decoration: none;
+}
+/* .navitem{
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  text-align: center;
+  color: blue;
+} */
+#logo{
+  height: 50%;
+  width: 2%;
+  width: fit-content;
+}
+.rectangle{
+  height: 300px;
+  width: 100%;
+  border: solid;
+  border-width: thick;
+  border-color: black;
+}
+.sortBox{
+  display: flex;
+  align-items: center;
+}
+.text{
+  display: block;
+}
+.vl{
+  border-left: 6px solid black;
+  margin-left: 50px;
+  margin-right: 30px;
+  height: 300px
 }
