--- a/src/frontend/src/styles/Community.scss
+++ b/src/frontend/src/styles/Community.scss
@@ -1,3 +1,4 @@
+/*
 #community {
     border-bottom: 5px solid black;
     text-align: center;
@@ -24,12 +25,6 @@
 
 body{
     font-family:sans-serif;
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
 
 ul{
@@ -101,9 +96,9 @@ ul{
     text-align: center;
 }
 
-li {
+ li {
     margin-top: 1em;
-}
+} 
 
 .userNames{
     display: inline-block;
@@ -123,5 +118,6 @@ li {
     height: 1em;;
     width: 1em;
 }
+*/
 
 
