--- a/src/frontend/src/styles/Home.scss
+++ b/src/frontend/src/styles/Home.scss
@@ -1,34 +1,36 @@
-h1{
-  padding-left: 100px;
+.bigText {
+  padding-left: 1%;
 }
-.container{
-  float: left;
-  display: block;
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 30px 1%;
+  flex-wrap: wrap;
+  width: 100%;
 }
-.content{
+/* .content{
   padding-left: 5%;
-  width: 75%;
-}
-.sidebar{
+} */
+.sidebar {
   width: 20%;
   float: right;
 }
-.gallery{
-  margin: 5px;
+.gallery {
+  /* margin: 5px; */
   border: 1px solid #ccc;
-  float: left;
-  width:340px;
-  cursor:pointer;
-}
-.gallery img{
+  box-shadow: 5px 5px lightgray;
   width: 340px;
-  height:170px;
+  cursor: pointer;
 }
-.title{
+.gallery img {
+  width: 340px;
+  height: 170px;
+}
+.title {
   padding: 15px;
   text-align: center;
 }
-.topCompanies{
+.topCompanies {
   width: 250px;
   list-style: decimal;
   justify-content: left;
@@ -38,20 +40,19 @@ h1{
   border: 1px solid;
   cursor: pointer;
 }
-.releases{
+.releases {
   border: 1px solid;
   width: 250px;
 }
-.games{
+.games {
   font-weight: bold;
 }
-.date{
+.date {
   font-weight: normal;
 }
 
-
-
-@media screen and (max-width: 1870px)
+/*
+ @media screen and (max-width: 1870px)
 {
   .gallery{
     margin: 2.5px;
@@ -67,7 +68,7 @@ h1{
     padding: 12.5px;
     text-align: center;
   }
-}
+} 
 
 @media screen and (max-width: 1640px)
 {
@@ -123,10 +124,6 @@ h1{
     padding: 12.5px;
     text-align: center;
   }
-  /* .lastColumn{
-    visibility: hidden;
-  }
-  */
   .sidebar{
     visibility: hidden;
   }
@@ -137,4 +134,4 @@ h1{
   .sidebar{
     visibility: hidden;
   }
-}
+} */
