fixed layout bugs and cleaned up code

--- a/src/frontend/src/styles/App.scss
+++ b/src/frontend/src/styles/App.scss
@@ -61,7 +61,7 @@ nav {
   height: 3em;
   padding-left: 5%;
 }
-li {
+.navContainer {
   display: inline;
   /* float: left; */
   list-style: none;
