--- a/src/frontend/src/styles/About.scss
+++ b/src/frontend/src/styles/About.scss
@@ -1,150 +1,140 @@
+.aboutTitle {
+  padding-top: 2%;
+  background-color: #474956;
+  color: white;
+  height: 20%;
+  font-size: calc(14px + 1vw);
+  margin: auto;
+  text-align: center;
+  font-family: Open;
+}
+
+.aboutText {
+  height: 80%;
+  // margin-left: 5px;
+  // margin-right: 5px;
+  font-size: calc(15px + 1vw);
+  // margin: auto;
+  max-height: 250px;
+  text-align: center;
+}
+
 .aboutUs {
-    background-color: white;
-    border-style: solid;
-    border-width: thin;
-    width: 50%;
-    min-width: 450px;
-    height: 100%;
-    margin: auto;
-    flex-direction: column;
+  background-color: white;
+  border-style: solid;
+  border-width: thin;
+  flex-direction: column;
+  height: 100%;
+  margin: auto;
+  min-width: 450px;
+  width: 50%;
 }
 
 #container {
-    height: 40vh;
-    margin: auto;
-    width: 100%;
-    min-height: 250px;
-    align-items: center;
-    justify-content: center;
-}
-view{
-    margin: auto;
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  height: 40vh;
+  justify-content: center;
+  margin: auto;
+  min-height: 250px;
+  width: 100%;
 }
 
-.members {
-    width: 50%;
-    min-width: 460px;
-    height: 100%;
+// #hr {
+//   background-color: black;
+//   border-width: 1px;
+// }
+
+// .linkedIn {
+//   font-size: calc(11px + 0.5vw);
+// }
+
+// You were setting the logos to 60 % of the 60 % you had originally gave it.
+// Delete logosContainer
+
+// .logosContainer {
+//   display: flex;
+//   height: 60%;
+//   margin: auto;
+//   width: 100%;
+// }
+
+.logosFit {
+  display: flex;
+  height: 60%;
+  width: 80%;
+  img {
+    height: 60%;
     margin: auto;
-    display: flex;
+  }
 }
 
 .member {
-    background-color: white;
-    width: 32%;
-    height: 100%;
-    border-radius: 10%;
-    display: flex;
-    flex-direction: column;
+  background-color: white;
+  border-radius: 10%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 32%;
 }
 
-.modProfile {
-    background-color: grey;
-    position: relative;
-    width: 50%;
-    padding-top: 50%;
-    max-width: 175px;
-    max-height: 175px;
-    min-width: 100px;
-    min-height: 100px;
-    border-radius: 50%;
+.members {
+  display: flex;
+  height: 100%;
+  gap: 10px;
+  margin: auto;
+  min-width: 460px;
+  width: 50%;
 }
 
-.modInfo {
-    width: 100%;
-    height: 50%;
-    display: flex;
+.profilePic {
+  background-color: grey;
+  border-radius: 50%;
+  max-height: 175px;
+  max-width: 175px;
+  min-height: 100px;
+  min-width: 100px;
+  // padding-top: 50%;
+  position: relative;
+  width: 50%;
 }
+
+// .modInfo {
+//   display: flex;
+//   height: 50%;
+//   width: 100%;
+// }
 
 .modWords {
-    height: 100%;
-    min-font-size: 16px;
-    font-size: calc(14px + .5vw);
-    text-align: center;
-    margin: auto;
-}
-
-.logo {
-    height: 60%;
-    width: auto;
-    margin: auto;
-    flex: auto;
-}
-
-.technologies {
-    background-color: white;
-    border-style: solid;
-    border-width: thin;
-    width: 50%;
-    min-width: 450px;
-    height: 100%;
-    margin: auto;
-    flex-direction: column;
-}
-
-#hr {
-    background-color: black;
-    border-width: 1px;
-}
-
-.aboutTitle {
-    background-color: #474956;
-    color: white;
-    height: 20%;
-    display: flex;
-
-}
-
-.aboutTitleFont {
-    font-size: calc(14px + 1vw);
-    text-align: center;
-    margin: auto;
-}
-.aboutText {
-    height: 80%;
-    display: flex;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-.aboutTextFont {
-    max-height: 250px;
-    font-size: calc(10px + 1vw);
-    text-align: center;
-    margin: auto;
-}
-
-.linkedIn {
-    font-size: calc(11px + .5vw);
+  font-size: calc(14px + 0.5vw);
+  height: 100%;
+  margin: auto;
+  min-font-size: 16px;
+  text-align: center;
 }
 
 .occupation {
-    font-size: calc(10px + .3vw);
+  font-size: calc(10px + 0.3vw);
 }
 
-.technologiesTitleCon {
-    height: 40%;
-    display: flex;
-    width: 100%;
+.technologies {
+  background-color: white;
+  border-style: solid;
+  border-width: thin;
+  flex-direction: column;
+  height: 100%;
+  margin: auto;
+  min-width: 450px;
+  width: 50%;
 }
 
 .technologiesTitleFont {
-    font-size: calc(14px + 1vw);
-    text-align: center;
-    margin: auto;
+  font-size: calc(14px + 1vw);
+  text-align: center;
 }
 
-.logosContainer {
-    height: 60%;
-    width: 100%;
-    display: flex;
-    margin: auto;
-}
-
-.logosFit {
-    height: 60%;
-    width: 80%;
-    display: flex;
-}
+// view {
+//   align-items: center;
+//   justify-content: center;
+//   margin: auto;
+// }
