--- a/src/frontend/src/styles/App.scss
+++ b/src/frontend/src/styles/App.scss
@@ -1,12 +1,12 @@
-$background: #f3f3f3;
+@use "Variables";
+
 body {
-  background-color: $background;
+  background-color: Variables.$background;
   color: black;
+  font-family: Variables.$siteFont;
   margin: 0;
 }
-.devin {
-  display: flex;
-}
+
 .navitem:link {
   text-decoration: none;
 }
@@ -17,85 +17,34 @@ body {
   content: " / ";
 }
 .navitem:visited {
-  text-decoration: none;
   color: black;
+  text-decoration: none;
 }
-#submitForm {
-  float: none;
-}
-#bottom {
-  margin-left: 10px;
-  font-weight: bold;
-}
-#topStyle {
-  border-right: none;
-  border-width: "thick";
-}
-.articleBox {
-  display: flex;
-  margin-bottom: 30px;
-}
-.articleText {
-  font-size: larger;
-}
+
 .searchbar {
-  display: inline;
-  align-self: center;
+  align-self: flex-end;
+  display: inline-block;
 }
 .searchinput {
 }
-.img {
-  width: 50%;
-  align-self: center;
-}
+
 .active {
   color: red;
 }
-hr {
-  border-width: 10px;
-}
+
 nav {
   display: flex;
-  overflow: hidden;
-  justify-content: center;
   height: 3em;
+  justify-content: center;
+  overflow: hidden;
   padding-left: 5%;
 }
 .navContainer {
+  color: white;
   display: inline;
-  /* float: left; */
+  float: left;
   list-style: none;
   text-align: center;
-  color: white;
-}
-select {
-  margin: auto 10px;
-}
-.poop {
-  text-decoration: none;
-}
-#logo {
-  height: 50%;
-  width: 2%;
-  width: fit-content;
-}
-.rectangle {
-  height: 300px;
-  width: 100%;
-  border: solid;
-  border-width: thick;
-  border-color: black;
-}
-.sortBox {
-  display: flex;
-  align-items: center;
-}
-.text {
-  display: block;
-}
-.vl {
-  border-left: 6px solid black;
-  margin-left: 50px;
-  margin-right: 30px;
-  height: 300px;
+
+  /*  */
 }
