--- a/src/frontend/src/styles/Community.scss
+++ b/src/frontend/src/styles/Community.scss
@@ -1,119 +1,117 @@
-.column{
-    flex: 1;
-    margin: 2px;
-    padding: 10px;
-    transition: .3s;
+.column {
+  flex: 1;
+  margin: 2px;
+  padding: 10px;
+  transition: 0.3s;
 }
 
 .columns {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    margin: 5px 0;
-
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin: 5px 0;
 }
 
 #community {
-    border-bottom: 5px solid black;
-    text-align: center;
-    width: 15%;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 50px;
-    margin-bottom: 3%;
+  border-bottom: 5px solid black;
+  text-align: center;
+  width: 15%;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 50px;
+  margin-bottom: 3%;
 }
 
-.communityPage{
-    font-family:sans-serif;
+.communityPage {
+  font-family: sans-serif;
 }
 
 li {
-    margin-top: 1em;
-} 
-
-.mosts{
-    border-bottom: 2px solid #666;
-    width: 45%;
-    display: flex;
-    margin-bottom: 10px;
-    flex-direction: column;
-    text-align: center;
-    padding-left: 6%;
+  margin-top: 1em;
 }
 
-.option{
-    background: #f2f2f2;
-    padding: 1em 1em 1em 3em;
-    margin: .5em 0;
-    border-radius: 5px;
-    position: relative;
-    transition: .2s;
+.mosts {
+  border-bottom: 2px solid #666;
+  width: 45%;
+  display: flex;
+  margin-bottom: 10px;
+  flex-direction: column;
+  text-align: center;
+  padding-left: 6%;
 }
 
-.option:hover{
-    background: #e5e5e5;
+.option {
+  background: #f2f2f2;
+  padding: 1em 1em 1em 3em;
+  margin: 0.5em 0;
+  border-radius: 5px;
+  position: relative;
+  transition: 0.2s;
 }
 
-
-.poll{
-    float: left;
-    margin-left: 5%;
-    width: 40%;
-    margin-bottom: 3%;
-    height: 350px;
-    background: #fff;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
-    padding: 1.5em;
-    border-radius: 10px;
-    position: relative;
-}  
-
-.profPic{
-    height: 1em;;
-    width: 1em;
+.option:hover {
+  background: #e5e5e5;
 }
 
-.question{
-    margin-bottom: 1em;
-    font-size: 1.3em;
-    text-align: center;
-    border-bottom: 2px solid #666;
+.poll {
+  float: left;
+  margin-left: 5%;
+  width: 40%;
+  margin-bottom: 3%;
+  height: 350px;
+  background: #fff;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 1.5em;
+  border-radius: 10px;
+  position: relative;
 }
 
-.topMembers{
-    margin-left: 10%;
-    width: 80%;
-    list-style: decimal;
-    font-size: large;
-    display: inline-block;
-    border: 1px solid;
-    padding: 1em;
-    border-radius: 10px;
-    margin-bottom: 3%;
+.profPic {
+  height: 1em;
+  width: 1em;
 }
 
-#topMembersTitle{
-    font-weight: bold;
-    font-size: xx-large;
-    float: left;
-    margin-top: 2%;
-    display: block;
+.question {
+  margin-bottom: 1em;
+  font-size: 1.3em;
+  text-align: center;
+  border-bottom: 2px solid #666;
 }
 
-ul{
-    list-style: none;
+.topMembers {
+  margin-left: 10%;
+  width: 80%;
+  list-style: decimal;
+  font-size: large;
+  display: inline-block;
+  border: 1px solid;
+  padding: 1em;
+  border-radius: 10px;
+  margin-bottom: 3%;
 }
 
-.userNames{
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
-    font-size: 1.3em;
+#topMembersTitle {
+  font-weight: bold;
+  font-size: xx-large;
+  float: left;
+  margin-top: 2%;
+  display: block;
 }
 
-.userValue{
-    display: inline-block;
-    vertical-align: top;
-    margin-left: 20px;
-    font-size: 1.3em;
+ul {
+  list-style: none;
+}
+
+.userNames {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  font-size: 1.3em;
+}
+
+.userValue {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 20px;
+  font-size: 1.3em;
 }
