--- a/src/frontend/src/styles/App.scss
+++ b/src/frontend/src/styles/App.scss
@@ -117,6 +117,7 @@ html {
 }
 .loginButton:hover {
   font-weight: bold;
+  // color: red;
 }
 .modal {
   height: 600px;
@@ -185,6 +186,7 @@ nav {
 }
 .navitem:hover {
   font-weight: bold;
+  color: red;
 }
 .searchinput {
   outline: none;
