updated styling for home, community, and contact

--- a/src/frontend/src/styles/Contact.scss
+++ b/src/frontend/src/styles/Contact.scss
@@ -1,13 +1,12 @@
 .contactContainer{
     width: 60%;
     margin: auto;
-    background-color: #D9D9D9;
     border: 5px ridge black;
 }
 .contactTitle {
     padding-top: 2%;
-    background-color: #474956;
-    color: white;
+    background-color: #000000d5;
+    color: Red;
     height: 20%;
     font-size: calc(14px + 1vw);
     margin: auto;
@@ -48,7 +47,7 @@
         font-size: 1.7em;
     }
     input{
-       
+       border-radius: 10px;
     }
     label{
         font-weight: bold;
