--- a/src/frontend/src/styles/Community.scss
+++ b/src/frontend/src/styles/Community.scss
@@ -14,10 +14,15 @@
 
 .communityPage {
   font-family: sans-serif;
+  background-image: url("../assets/resul-mentes-DbwYNr8RPbg-unsplash.jpg");
 }
 
 #communityTitle {
-  border-bottom: 5px solid black;
+  color: red;
+  background-color: black;
+  border-radius: 15px;
+  font-style: italic;
+  padding-right: 5px;
   text-align: center;
   width: fit-content;
   margin-left: auto;
@@ -42,6 +47,16 @@
 
 .option {
   background: #f2f2f2;
+  padding: 1em 1em 1em 3em;
+  margin: 0.5em 0;
+  border-radius: 5px;
+  position: relative;
+  transition: 0.2s;
+  font-size: 1.5em;
+}
+
+.optionWinner{
+  background: #50C878;
   padding: 1em 1em 1em 3em;
   margin: 0.5em 0;
   border-radius: 5px;
