Changed Some Stuff

--- a/src/frontend/src/styles/Home.scss
+++ b/src/frontend/src/styles/Home.scss
@@ -44,12 +44,12 @@
   padding-left: 5%;
 } */
 
-.list{
-  h2{
+.list {
+  h2 {
     background-color: black;
     padding-left: 5px;
   }
-  background-color: #c0c0c082;
+  // background-color: #c0c0c082;
   border: 2px solid red;
   margin-bottom: 30px;
 }
@@ -65,7 +65,7 @@
   width: 20%;
 }
 
-.sidebarHeader{
+.sidebarHeader {
   color: red;
   font-size: 2em;
   margin: auto;
