--- a/src/frontend/src/styles/About.scss
+++ b/src/frontend/src/styles/About.scss
@@ -8,8 +8,15 @@
   font-family: Open;
 }
 
+.aboutPhoto {
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
 .aboutText {
-  font-size: calc(15px + 1vw);
+  font-size: calc(10px + 1vw);
   margin: 0;
   max-height: 250px;
   text-align: center;
@@ -20,10 +27,13 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  margin: auto;
-  min-width: 450px;
-  width: 50%;
+  margin: auto auto auto 1%;
+  width: 47%;
   display: flex;
+  z-index: 9;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 .bottomContainer {
@@ -32,13 +42,11 @@
   flex-direction: column;
   gap: 10px;
   align-items: center;
-  height: 50%;
+  margin: 10% 0 10px 0;
 }
 
 .cardContainer {
-  height: 400px;
-  width: 300px;
-  background-color: bisque;
+  width: calc(100% / 3);
   border-radius: 10%;
 }
 
@@ -49,6 +57,7 @@
   margin: auto;
   min-height: 250px;
   width: 100%;
+  position: relative;
 }
 
 hr {
@@ -57,7 +66,6 @@ hr {
 }
 
 .flexContainer {
-  height: 40%;
   margin-top: 10px;
   margin-bottom: 10px;
   width: 100%;
@@ -151,10 +159,11 @@ hr {
 
 .logosFit {
   display: flex;
-  height: 60%;
-  width: 80%;
+  height: calc(60%);
+  width: 100%;
+  margin: auto;
   img {
-    height: 60%;
+    height: 55%;
     margin: auto;
   }
 }
@@ -182,7 +191,7 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+
   a:nth-child(2) {
     text-decoration: none;
     margin-top: 5px;
@@ -200,10 +209,14 @@ hr {
 }
 
 .profile {
-  height: 100%;
+  height: 15vw;
   /* padding-top: 100%; */
   /* aspect-ratio: 1/1; */
-  width: 50%;
+  width: 15vw;
+  max-height: 150px;
+  max-width: 150px;
+  min-width: 75px;
+  min-height: 75px;
   border-radius: 50%;
   background-color: gray;
   justify-items: center;
@@ -260,3 +273,23 @@ hr {
 //   justify-content: center;
 //   margin: auto;
 // }
+
+@media only screen and (max-width: 700px) {
+  .nameText{
+    font-size: Variables.$lg-text / 1.5;
+  }
+
+}
+
+@media only screen and (max-width: 500px) {
+  .nameText{
+    font-size: Variables.$lg-text / 2;
+  }
+
+}
+@media only screen and (max-width: 400px) {
+  .nameText{
+    font-size: 10px;
+  }
+
+}
