--- a/src/frontend/src/styles/Games.scss
+++ b/src/frontend/src/styles/Games.scss
@@ -6,7 +6,9 @@
 .articleStyle {
   cursor: pointer;
   object-fit: cover;
+  object-position: 50% 50%;
   width: 300px;
+  // max-width: 100%;
   padding-left: 1%;
   height: 100%;
 }
@@ -21,7 +23,8 @@
 }
 
 .gbigText {
-  padding-left: 1%;
+  padding-left: 2%;
+  margin-block-end: 0;
 }
 .gline {
   border-width: 10px;
