--- a/src/frontend/src/styles/Community.scss
+++ b/src/frontend/src/styles/Community.scss
@@ -1,27 +1,40 @@
+.birthdays{
+  //flex-grow: 1.5;
+}
+
+.break {
+  flex-basis: 100%;
+}
+
 .column {
   flex: 1;
   margin: 2px;
   padding: 10px;
   transition: 0.3s;
+  width: 33%;
+  margin-right: 50px;
 }
 
 .columns {
+  margin-left: 100px;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  margin: 5px 0;
+  //margin: 5px 0;
 }
 
 .communityPage {
   font-family: sans-serif;
-  background-image: url("../assets/resul-mentes-DbwYNr8RPbg-unsplash.jpg");
+  margin-top: 50px;
+  //background-image: url("../assets/resul-mentes-DbwYNr8RPbg-unsplash.jpg");
+  //background-color: lightblue;
 }
 
 #communityTitle {
   color: red;
   background-color: black;
   border-radius: 15px;
-  font-style: italic;
+  //font-style: italic;
   padding-right: 5px;
   text-align: center;
   width: fit-content;
@@ -29,6 +42,32 @@
   margin-right: auto;
   font-size: 50px;
   margin-bottom: 3%;
+}
+
+.eldenring{
+  // background-image: url("../assets/eldenring.jpeg");
+  // background-position: 24% 4.5%;
+  background-color: #50c878;
+  padding: 1em 1em 1em 3em;
+  margin: 0.5em 0;
+  border-radius: 5px;
+  position: relative;
+  transition: 0.2s;
+  font-size: 1.5em;
+}
+
+.gameReleases{
+  //flex-grow: 2;
+}
+
+.hogwarts:hover{
+  background-image: url("../assets/hogwartslegacy.jpeg");
+  background-position: 30% 55%;
+}
+
+.jedi:hover{
+  background-image: url("../assets/jedisurvivor.jpg");
+  background-position: 7.3% 28%;
 }
 
 .mosts {
@@ -39,6 +78,7 @@
   flex-direction: column;
   text-align: center;
   padding-left: 6%;
+  font-size: 1.4em;
 }
 
 .mostSection {
@@ -55,19 +95,9 @@
   font-size: 1.5em;
 }
 
-.optionWinner{
-  background: #50C878;
-  padding: 1em 1em 1em 3em;
-  margin: 0.5em 0;
-  border-radius: 5px;
-  position: relative;
-  transition: 0.2s;
-  font-size: 1.5em;
-}
-
-.option:hover {
-  background: #e5e5e5;
-}
+// .option:hover {
+//   background: #e5e5e5;
+// }
 
 .poll {
   float: left;
@@ -98,6 +128,19 @@
   border-bottom: 2px solid #666;
 }
 
+.spongebob:hover{
+  background-image: url("../assets/spongebob.jpg");
+  background-position: center;
+}
+
+.submitButton{
+  margin: auto;
+}
+
+.techReleases{
+  //flex-grow: 2;
+}
+
 .topMembers {
   margin-left: 10%;
   width: 80%;
@@ -108,6 +151,7 @@
   padding: 1em;
   border-radius: 10px;
   margin-bottom: 3%;
+  background-color: white;
 }
 
 #topMembersTitle {
@@ -122,7 +166,7 @@
   display: inline-block;
   justify-content: center;
   padding-inline-start: 0;
-  font-size: 1.3em;
+  font-size: 1.4em;
 }
 
 .userValue {
@@ -130,4 +174,9 @@
   vertical-align: top;
   margin-left: 20px;
   font-size: 1.3em;
+}
+
+.zelda:hover{
+  background-image: url("../assets/zelda.jpg");
+  background-position: 40% 20%;
 }
