--- a/src/frontend/src/styles/Home.scss
+++ b/src/frontend/src/styles/Home.scss
@@ -48,6 +48,19 @@
   font-size: 1.4em;
 }
 
+.gamingList {
+  h2 {
+    background-color: red;
+    color: white;
+    text-align: center;
+    padding-left: 5px;
+  }
+  border-radius: 10px;
+  // background-color: #c0c0c082;
+  border: 4px solid red;
+  margin-bottom: 30px;
+}
+
 /* .content{
   padding-left: 5%;
 } */
@@ -58,13 +71,16 @@
   margin-top: 1rem;
 }
 
-.list {
+.techList {
   h2 {
     background-color: black;
+    color: white;
+    text-align: center;
     padding-left: 5px;
   }
+  border-radius: 10px;
   // background-color: #c0c0c082;
-  border: 2px solid red;
+  border: 4px solid black;
   margin-bottom: 30px;
 }
 
@@ -74,13 +90,26 @@
   // width: 250px;
 }
 
+.releasesList {
+  h2 {
+    background-color: blue;
+    color: white;
+    text-align: center;
+    padding-left: 5px;
+    //border-bottom: 2px solid black;
+  }
+  border-radius: 10px;
+  // background-color: #c0c0c082;
+  border: 4px solid blue;
+  margin-bottom: 30px;
+}
+
 .sidebar {
   // float: left;
   width: 18%;
 }
 
 .sidebarHeader {
-  color: red;
   font-size: 2em;
   margin: auto;
 }
@@ -99,7 +128,7 @@
   font-size: 2em;
   justify-content: left;
   list-style: decimal;
-  padding-left: 30px;
+  //padding-left: 30px;
   // width: 250px;
 }
 
