--- a/src/frontend/src/styles/App.scss
+++ b/src/frontend/src/styles/App.scss
@@ -1,10 +1,6 @@
 @use "Variables";
 $enable-important-utilities: false;
 
-.active {
-  // color: red;
-}
-
 .animate {
   animation: animatezoom 0.6s;
 }
@@ -23,6 +19,10 @@ body {
   color: black;
   font-family: Variables.$siteFont;
   margin: 0;
+}
+
+.carousel-root {
+  cursor: pointer;
 }
 
 .carouselcomponent {
@@ -231,6 +231,11 @@ nav {
     color: red;
   }
 }
+
+nav a.active {
+  color: rgb(230, 13, 13) !important;
+  font-weight: bold;
+}
 .navlink {
   text-decoration: none;
 }
@@ -241,7 +246,6 @@ nav {
     list-style: none;
     .navitem {
       font-size: 1.6rem;
-      color: black;
       text-decoration: none;
     }
   }
@@ -251,7 +255,11 @@ nav {
 }
 .navitem:hover {
   font-weight: bold;
-  color: red;
+  // color: red;
+}
+nav a:visited {
+  text-decoration: none;
+  color: black;
 }
 .notification {
   position: absolute;
