--- a/src/frontend/src/styles/Article.scss
+++ b/src/frontend/src/styles/Article.scss
@@ -12,7 +12,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  filter: blur(8px);
+  filter: blur(8px) brightness(50%);
   object-fit: cover;
   top: 0;
   left: 0;
