--- a/src/frontend/src/styles/Games.scss
+++ b/src/frontend/src/styles/Games.scss
@@ -10,6 +10,9 @@
   display: flex;
   margin-bottom: 30px;
   width: 90%;
+  a {
+    height: 300px;
+  }
   h1 {
     margin-block-start: 0;
     font-size: Variables.$xl-text;
@@ -23,7 +26,7 @@
   width: 300px;
   // max-width: 100%;
   padding-left: 1%;
-  height: 100%;
+  height: 300px;
 }
 
 .articleText {
@@ -35,6 +38,9 @@
   font-weight: bold;
   font-size: Variables.$md-text;
   font-style: italic;
+  svg {
+    font-size: Variables.$md-text;
+  }
 }
 
 .gbigText {
@@ -43,6 +49,8 @@
 }
 .gline {
   border-width: 10px;
+  width: 80%;
+  background-color: red;
 }
 
 .rectangle {
