--- a/src/frontend/src/styles/Contact.scss
+++ b/src/frontend/src/styles/Contact.scss
@@ -1,34 +1,40 @@
+.wholeContainer {
+  display: flex;
+  width: 100%;
+  margin: 20px 0;
+}
 .contactContainer{
-    width: 60%;
-    margin: auto;
-    border: 5px ridge black;
+    width: 50%;
+    margin: 0 5% 0 0;
+    padding-bottom: 10px;
+  padding-top: 10px;
+  background-color: white;
+  position: relative;
 }
 .contactTitle {
-    padding-top: 2%;
-    background-color: #000000d5;
     color: Red;
-    height: 20%;
-    font-size: calc(14px + 1vw);
-    margin: auto;
+    font-size: calc(25px + 1vw);
     text-align: center;
-    font-family: Open;
+    margin: auto auto 5px 5%;
+    font-weight: 800;
   }
   
   .contactText {
-    height: 80%;
-    font-size: calc(15px + 1vw);
-    text-align: center;
+    font-size: calc(10px + .5vw);
+    text-align: left;
+    margin: 0 5% auto 5%;
+    color: gray;
   }
   
   .contactUs {
-    background-color: white;
-    border-style: solid;
     flex-direction: column;
-    height: 100%;
-    margin: auto;
-    margin-bottom: 20px;
-    min-width: 450px;
-    width: 60%;
+    margin: 0 0 0 5%;
+    width: 50%;
+    background-color: #171717;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
   }
 .formHeader{
     width: fit-content;
@@ -41,10 +47,12 @@
     margin: auto;
     display: block;
     button{
-        margin-left: 50%;
+        margin-left: auto;
+        margin-right: auto;
         height: 40px;
         width: 60px;
         font-size: 1.7em;
+      display: block;
     }
     input{
        border-radius: 10px;
@@ -58,4 +66,65 @@
         width: 100%;
         height: 200px;
     }
+}
+.popup{
+  display: flex;
+  flex-direction: column;
+  border-style: solid;
+  border-color: #111111;
+  border-width: 1px;
+  width: 60%;
+  background-color: #ffffff;
+  border-radius: 6px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 50%;
+  text-align: center;
+  padding: 5%;
+
+}
+.popup p{
+  font-size: 17px;
+  font-weight: 500;
+  margin: 5% auto 5% auto;
+}
+.popup img{
+  height: 40%;
+  margin: 5% auto 0 auto;
+}
+.popup button{
+  width: 90%;
+  height: 25%;
+  background-color: #ff0000;
+  border: 0;
+  outline: none;
+  font-size: 14px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: auto;
+}
+
+@media only screen and (max-width: 850px) {
+  .wholeContainer{
+    flex-direction: column;
+  }
+  .contactContainer{
+    width: 100%;
+    margin: 10px 0;
+  }
+  .contactUs{
+    width: 100%;
+    height: 25vh;
+    margin: 0;
+    min-height: 200px;
+  }
+  .contactTitle{
+    margin: auto auto 5px auto;
+  }
+  .contactText{
+    margin: 0 20% auto 20%;
+  }
+
 }
