--- a/src/frontend/src/styles/App.scss
+++ b/src/frontend/src/styles/App.scss
@@ -1,10 +1,6 @@
 @use "Variables";
 $enable-important-utilities: false;
 
-.active {
-  // color: red;
-}
-
 .animate {
   animation: animatezoom 0.6s;
 }
@@ -24,39 +20,75 @@ body {
   font-family: Variables.$siteFont;
   margin: 0;
 }
-.btn {
-  display: inline-block;
-  color: white;
-  background-color: #007bff;
-  border-color: #007bff;
-  font-weight: 400;
-  text-align: center;
-  vertical-align: middle;
-  padding: 0.375rem 0.75rem;
-  border-radius: 0.25rem;
+
+.carousel-root {
   cursor: pointer;
-}
-.btn.reset {
-  background-color: rgba(255, 30, 0, 0.818);
-  // color: black;
-  border-color: rgba(255, 30, 0, 0.818);
-  float: right;
-}
-.btn.signup {
-  background-color: black;
-  color: white;
-  float: right;
-  border: none;
-}
-.btn.signedup {
-  background-color: transparent;
-  border: none;
-  color: #495057;
 }
 
 .carouselcomponent {
   padding-left: 2%;
   padding-right: 2%;
+}
+.darkmode {
+  color: white;
+  background-color: black;
+  nav {
+    color: white;
+  }
+}
+.displayflex {
+  display: flex;
+}
+.dropdown {
+  position: absolute;
+  background-color: gray;
+  top: 5%;
+  right: 2%;
+  z-index: 5;
+  margin-top: 10px;
+  width: 200px;
+  max-height: 0px;
+  transition: max-height 0.5s;
+  overflow: hidden;
+  .profiletab {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    padding: 10px;
+    div {
+      font-size: Variables.$md-text;
+    }
+  }
+  hr {
+    width: 98%;
+  }
+  .dropdowntab {
+    display: flex;
+    justify-content: space-between;
+    padding: 5%;
+    font-size: Variables.$md-text;
+    font-weight: 300;
+    cursor: pointer;
+    div {
+      display: flex;
+      gap: 5px;
+      svg {
+        color: white;
+      }
+    }
+    .arrowdropdown {
+      transition: transform 0.5s;
+    }
+  }
+}
+.dropdown.openmenu {
+  max-height: 210px;
+}
+.dropdowntab:hover div {
+  font-weight: bold;
+}
+.dropdowntab:hover .arrowdropdown {
+  transform: translateX(5px);
 }
 .imgstyle {
   height: 360px;
@@ -98,7 +130,6 @@ body {
     }
   }
 }
-
 .form-control {
   display: block;
   width: 100%;
@@ -133,12 +164,6 @@ body {
 html {
   font-size: 62.5%; //Sets the Font Size of the site to 10px instead of 16px. So now we can use rem to set px size. Ex: 15 px == 1.5rem.
 }
-.invalid-feedback {
-  color: #dc3545;
-  margin-top: 0.25rem;
-  font-size: 80%;
-  width: 100%;
-}
 
 .loading {
   animation: loading 2s infinite linear;
@@ -154,66 +179,38 @@ html {
 }
 
 .loginButton {
+  color: white;
   border: none;
-  background-color: transparent;
   font-size: 1.6rem;
-  line-height: 10px;
+  margin-right: 10px;
   cursor: pointer;
+  padding: 10px;
+  background-color: #007bff;
+}
+.loginButton.signup {
+  background-color: black;
+  color: white;
 }
 .loginButton:hover {
   font-weight: bold;
   // color: red;
 }
-.modal {
-  height: 600px;
-  width: 500px;
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-}
-.modalBody {
-  display: flex;
-  justify-content: center;
-  input {
-    width: 100%;
-    outline: none;
-    border-radius: 10px;
-    background: transparent;
-  }
-}
-.modalContainer {
-  background-color: rgba(0, 0, 0, 0.4);
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  z-index: 100;
-  overflow: auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.modalX {
-  display: flex;
-  background-color: transparent;
-  justify-content: flex-end;
-  border: none;
-  cursor: pointer;
-}
+
 nav {
   display: flex;
   font-size: 1.5rem;
   width: 100%;
   justify-content: space-around;
-  overflow: hidden;
+  // overflow: hidden;
   align-items: center;
   span {
     color: red;
   }
+}
+
+nav a.active {
+  color: rgb(230, 13, 13) !important;
+  font-weight: bold;
 }
 .navlink {
   text-decoration: none;
@@ -225,7 +222,6 @@ nav {
     list-style: none;
     .navitem {
       font-size: 1.6rem;
-      color: black;
       text-decoration: none;
     }
   }
@@ -235,7 +231,11 @@ nav {
 }
 .navitem:hover {
   font-weight: bold;
-  color: red;
+  // color: red;
+}
+nav a:visited {
+  text-decoration: none;
+  color: black;
 }
 .notification {
   position: absolute;
@@ -252,15 +252,21 @@ nav {
     transform: translateX(0);
   }
 }
+.personcircle {
+  font-size: 2rem;
+}
+.profileside {
+  display: flex;
+  gap: 2px;
+  cursor: pointer;
+}
 .searchinput {
   outline: none;
   font-size: 1.5rem;
   background: transparent;
   border: none;
 }
-#text-center {
-  text-align: center;
-}
+
 .xButton {
   background-color: transparent;
   border: none;
