Fixed header in contact page

--- a/src/frontend/src/styles/Contact.scss
+++ b/src/frontend/src/styles/Contact.scss
@@ -38,8 +38,7 @@
   }
 .formHeader{
     width: fit-content;
-    margin: auto;
-    margin-top: 10px;
+    margin: auto auto 10px auto;
     border-bottom: 3px solid black;
 }
 .inputForms{
