--- a/src/frontend/src/styles/Contact.scss
+++ b/src/frontend/src/styles/Contact.scss
@@ -89,6 +89,12 @@
   font-weight: 500;
   margin: 5% auto 5% auto;
 }
+.checkCircleFill{
+  height: 40%;
+  margin: 5% auto 0 auto;
+  font-size: 112px;
+  color: red;
+}
 .popup img{
   height: 40%;
   margin: 5% auto 0 auto;
